# arcaai

./: .env.example  .gitattributes  .gitignore  BUILD_TRACKER.md  CHANGELOG.md  CONTRIBUTING.md  CURRENT_STATE.md  DECISIONS.md  DESIGN_PHASE_CHARTER.md  PROJECT_CONTEXT.md  README.md  SESSION_NOTES.md  SESSION_NOTES_entry_2026-05-13.md  SESSION_NOTES_entry_2026-06-11.md  SESSION_NOTES_entry_2026-06-12_close.md  SESSION_PROTOCOLS.md  START_HERE.md  pyproject.toml
.dvc/: config
.github/: pull_request_template.md
agent/: __init__.py  fixtures.py  graph.py  packaging.py  scoring.py
api/: __init__.py  main.py  version.py
archive/: README.md
contracts/: README.md  fraud_scoring.py
data/: README.md
decisions/: 0001-pretrained-model-positioning.md  0002-three-stage-model-lifecycle.md  0003-pipeline-as-platform.md  0004-target-market-segment.md  0005-data-strategy.md  0006-serving-model-source.md  0007-artefact-store-dvc.md  0008-serving-framework-bentoml.md  0009-platform-vertical-boundary.md  README.md  _template.md
diagrams/: README.md
docs/: DESIGN_PHASE_CHARTER.md
frontend/: README.md
glossary/: README.md
governance/: document-register.yaml  review-protocols.md
infra/: docker-compose.dev.yml
ingest/: __init__.py
rfcs/: README.md
scripts/: b6_inc5_latency.py  dev_down.cmd  dev_up.cmd  dvc_init.cmd  g9_latency.py  gate_score_check.py  generate_provenance_manifest.py  lint.cmd  test.cmd
specs/: _template.md
tests/: test_agent_graph.py  test_api_health.py  test_llm_smoke.py  test_packaging.py  test_score_node.py  test_smoke.py
(+109 files in other folders)
