[project]
name = "arcaai"
version = "0.1.0"
description = "ArcaAI - the AI control layer for regulated banking decisions (reference implementation)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "mlflow>=2.14",
    "dvc>=3.50",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "pyyaml>=6.0",
    "great-expectations>=1.3",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "bentoml>=1.2",
    "langgraph>=1.2.9",
    "langchain-core>=1.5.0",
    "langchain-ollama>=1.1.0",
    "ollama>=0.6.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.setuptools]
packages = ["agent", "api", "contracts", "verticals", "ingest"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]

[tool.pytest.ini_options]
testpaths = ["tests", "verticals"]
addopts = "-q"

[tool.coverage.run]
source = ["agent", "api", "verticals", "ingest"]

[tool.coverage.report]
# B1 ratchet start per Build & Quality Plan: 60% rising to 80% by B9
fail_under = 60
